# Menu_UpTrader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
nginx/: nginx.conf
uptrader/: manage.py  menu_item_fixture.json
uptrader/menu/: admin.py  urls.py  views.py
uptrader/menu/factories/: menu_item_factory.py
uptrader/menu/management/commands/: create_menu_items.py
uptrader/menu/migrations/: 0001_initial.py  0002_alter_menuitem_parent.py  0003_alter_menuitem_parent.py
uptrader/menu/models/: menu_item.py
uptrader/menu/services/: menu_funcs.py
uptrader/menu/templates/menu/: all_menu.html  base.html  index.html  one_menu.html
uptrader/menu/templatetags/: menu_tags.py
uptrader/menu/tests/tests_services/: tests_menu_funcs.py
uptrader/static/: styles.css
uptrader/uptrader/: asgi.py  settings.py  urls.py  wsgi.py
